@@ -199,6 +199,8 @@ TF_MENU_DISPLAY_ADVANCE=Use &TAB to Advance
 
 TF_MENU_DISPLAY_MARK_TRANSLATED=&Mark translated segments
 
+TF_MENU_DISPLAY_MARK_UNTRANSLATED=Mark &untranslated segments
+
 TF_MENU_DISPLAY_FILTERS=File &Filters...
 
 TF_MENU_DISPLAY_FONT=F&ont...
@@ -778,11 +780,11 @@ ABOUTDIALOG_VERSION=OmegaT version {0}
 ABOUTDIALOG_VERSION_UPDATE=OmegaT version {0}, update {1}
 
 ABOUTDIALOG_TITLE=About OmegaT
-ABOUTDIALOG_COPYRIGHT=Copyright \u00A9 2000-2007 Keith Godfrey, Maxym Mykhalchuk and others
+ABOUTDIALOG_COPYRIGHT=Copyright \u00a9 2000-2007 Keith Godfrey, Maxym Mykhalchuk and others
 
 ABOUTDIALOG_LICENSE_BUTTON=&License
 ABOUTDIALOG_CONTRIBUTORS=\
-    OmegaT is a free and open source multiplatform Computer Assisted Translation tool with fuzzy matching, translation memory, keyword search, glossaries, and translation leveraging into updated projects.\n\nOmegaT is the original work of Keith Godfrey.\nMarc Prior is the coordinator of the OmegaT project.\n\nCode has been contributed by\: \n  Didier Briel\n  Kim Bruning\n  Sandra Jean Chua \n  Thomas Huriaux\n  Maxym Mykhalchuk (lead developer)\n  Henry Pijffers (release manager)\n  Benjamin Siband\n  Martin Wunderlich\n\nOther contributions are detailed in the readme.txt file\n\nOmegaT uses the following libraries\:\n  HTMLParser by Somik Raha, Derrick Oswald and others (LGPL License).\n  MRJ Adapter by Steve Roy (LGPL License).\n  VLDocking Framework by VLSolutions (CeCILL License).\n  Hunspell by L\u00E1szl\u00F3 N\u00E9meth and others (LGPL License).\n  JNA by Todd Fast, Timothy Wall and others (LGPL License).\n  Swing-Layout (LGPL License).
+    OmegaT is a free and open source multiplatform Computer Assisted Translation tool with fuzzy matching, translation memory, keyword search, glossaries, and translation leveraging into updated projects.\n\nOmegaT is the original work of Keith Godfrey.\nMarc Prior is the coordinator of the OmegaT project.\n\nCode has been contributed by\: \n  Didier Briel\n  Kim Bruning\n  Sandra Jean Chua \n  Thomas Huriaux\n  Maxym Mykhalchuk (lead developer)\n  Henry Pijffers (release manager)\n  Benjamin Siband\n  Martin Wunderlich\n\nOther contributions are detailed in the readme.txt file\n\nOmegaT uses the following libraries\:\n  HTMLParser by Somik Raha, Derrick Oswald and others (LGPL License).\n  MRJ Adapter by Steve Roy (LGPL License).\n  VLDocking Framework by VLSolutions (CeCILL License).\n  Hunspell by L\u00e1szl\u00f3 N\u00e9meth and others (LGPL License).\n  JNA by Todd Fast, Timothy Wall and others (LGPL License).\n  Swing-Layout (LGPL License).
 
 
 # LicenseDialog.java
