@@ -5,7 +5,7 @@
 x.x.x vs. 1.7.2
 
 
-  8 Enhancements
+  9 Enhancements
   2 Bugfixes
 
 ----------------------------------------------------------------------
@@ -26,7 +26,10 @@ x.x.x
   http://sourceforge.net/support/tracker.php?aid=1805172   
 
   - Mark translated segments 
-  http://sourceforge.net/support/tracker.php?aid=1805173    
+  http://sourceforge.net/support/tracker.php?aid=1805173 
+
+  - Mark untranslated segments   
+  http://sourceforge.net/support/tracker.php?aid=1809004
 
   - Navigation history  
   http://sourceforge.net/support/tracker.php?aid=1805175     
